# hip-potential

./: CMakeLists.txt  README.md  config.cmake  dependency.cmake  pkg.yaml
src/: CMakeLists.txt  configure.cmake  hip_eam_device.cc  hip_eam_device.h  hip_eam_device.inl  hip_macros.h  hip_pot-config.cmake.in  hip_pot.cpp  hip_pot.h  hip_pot_dev_eam_segmented_spline.cc  hip_pot_dev_eam_segmented_spline.h  hip_pot_dev_eam_spline.hpp  hip_pot_dev_eam_spline_loader.hpp  hip_pot_dev_tables_compact.hpp  hip_pot_device.cc  hip_pot_device.h  hip_pot_device_global_vars.cc  hip_pot_device_global_vars.h  hip_pot_macros.h  hip_pot_types.h  pot_building_config.h.in
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  eam_pot_fixture.h  hip_pot_test.cpp  main.cpp  segmented_eam_pot_fixture.hpp  segmented_pot_spline_test.cpp
tests/unit/device/: CMakeLists.txt  eam_calc_kernel.cpp  eam_calc_kernel.h  eam_calc_test_device.cpp  eam_calc_test_device.h
